force-app/main/default/objects/Ticket__c/fields/Modified_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Modified_Deliverables__c</fullName>
    <description
  >Sales Admin Request Form Field - Opportunity Product(s) Modified Deliverables</description>
    <inlineHelpText
  >Sales Admin Request Form Field - Opportunity Product(s) Modified Deliverables</inlineHelpText>
    <label>Modified Deliverables</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>