force-app/main/default/objects/Ticket__c/fields/Navigator_Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Employee_Range__c</fullName>
    <label>Navigator Employee Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - 1 - 250</fullName>
            </value>
            <value>
                <fullName>02 - 251 - 500</fullName>
            </value>
            <value>
                <fullName>03 - 501 - 1,000</fullName>
            </value>
            <value>
                <fullName>04 - 1,001 - 3,000</fullName>
            </value>
            <value>
                <fullName>05 - 3,001 - 5,000</fullName>
            </value>
            <value>
                <fullName>06 - 5,001 - 10,000</fullName>
            </value>
            <value>
                <fullName>07 - 10,001 - 25,000</fullName>
            </value>
            <value>
                <fullName>08 - 25,001 - 50,000</fullName>
            </value>
            <value>
                <fullName>09 - &gt; 50,000</fullName>
            </value>
            <value>
                <fullName>99 - Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>