force-app/main/default/objects/Ticket__c/fields/Navigator_Enrollment_Range__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Enrollment_Range__c</fullName>
    <label>Navigator Enrollment Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - 1 - 5,000</fullName>
            </value>
            <value>
                <fullName>02 - 5,001 – 10,000</fullName>
            </value>
            <value>
                <fullName>03 - 10,001 – 15,000</fullName>
            </value>
            <value>
                <fullName>04 - &gt;15,001</fullName>
            </value>
            <value>
                <fullName>99 - Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>