force-app/main/default/objects/Ticket__c/fields/Navigator_Population_Range__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Population_Range__c</fullName>
    <label>Navigator Population Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - 1 - 25,000</fullName>
            </value>
            <value>
                <fullName>02 - 25,001 - 50,000</fullName>
            </value>
            <value>
                <fullName>03 - 50,001 - 75,000</fullName>
            </value>
            <value>
                <fullName>04 - 75,001 - 100,000</fullName>
            </value>
            <value>
                <fullName>05 - 100,001 - 250,000</fullName>
            </value>
            <value>
                <fullName>06 - 250,001 - 500,000</fullName>
            </value>
            <value>
                <fullName>07 - 500,001 - 750,000</fullName>
            </value>
            <value>
                <fullName>08 - 750,001 - 1,000,000</fullName>
            </value>
            <value>
                <fullName>09 - 1,000,001 - 5,000,000</fullName>
            </value>
            <value>
                <fullName>10 - &gt;5,000,000</fullName>
            </value>
            <value>
                <fullName>99 - Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>