force-app/main/default/objects/Ticket__c/fields/Navigator_Stage__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Stage__c</fullName>
    <description
  >Created for Ticket #80604. Only used on Sales Support record type tickets.</description>
    <inlineHelpText
  >The Navigator Stage of the Account at the time the ticket was created.</inlineHelpText>
    <label>Navigator Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>