force-app/main/default/objects/Ticket__c/fields/navigator_version__c.field-meta.xml
<CustomField>
    <fullName>navigator_version__c</fullName>
    <description>Navigator version</description>
    <inlineHelpText>Navigator version</inlineHelpText>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>