force-app/main/default/objects/Ticket__c/fields/Needs_QA__c.field-meta.xml
<CustomField>
    <fullName>Needs_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check here if the ticket requires a QA person to verify</description>
    <inlineHelpText
  >Check here if the ticket requires a QA person to verify</inlineHelpText>
    <label>Needs QA</label>
    <type>Checkbox</type>
</CustomField>