force-app/main/default/objects/Ticket__c/fields/New_Note__c.field-meta.xml
<CustomField>
    <fullName>New_Note__c</fullName>
    <description
  >Allows users to type in a new note that will then append to the top of the existing notes field.</description>
    <label>New Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>