force-app/main/default/objects/Ticket__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reallocation Tickets</relationshipLabel>
    <relationshipName>Reallocation_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>