force-app/main/default/objects/Ticket__c/fields/Opp_Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opp_Last_Modified_Date_Time__c</fullName>
    <label>Opp Last Modified Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>