force-app/main/default/objects/Ticket__c/fields/Opt_Out_Email_Group__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Email_Group__c</fullName>
    <inlineHelpText
  >Please select the email marketing group that will be used for this promotion. Existing opt outs will be excluded from the estimate or list.</inlineHelpText>
    <label>Opt Out Email Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Events - CDE</fullName>
            </value>
            <value>
                <fullName>Events - CDG</fullName>
            </value>
            <value>
                <fullName>Events - EE</fullName>
            </value>
            <value>
                <fullName>Events - EM</fullName>
            </value>
            <value>
                <fullName>Events - GOV</fullName>
            </value>
            <value>
                <fullName>Events - GT</fullName>
            </value>
            <value>
                <fullName>Events - Insider</fullName>
            </value>
            <value>
                <fullName>Papers - CDE</fullName>
            </value>
            <value>
                <fullName>Papers - EM</fullName>
            </value>
            <value>
                <fullName>Papers - GOV</fullName>
            </value>
            <value>
                <fullName>Papers - GT</fullName>
            </value>
            <value>
                <fullName>Promo - CDE</fullName>
            </value>
            <value>
                <fullName>Promo - EM</fullName>
            </value>
            <value>
                <fullName>Promo - GOV</fullName>
            </value>
            <value>
                <fullName>Promo - GT</fullName>
            </value>
            <value>
                <fullName>Promo - Insider</fullName>
            </value>
            <value>
                <fullName>Promo - NAV - Member</fullName>
            </value>
            <value>
                <fullName>Surveys - GT</fullName>
            </value>
            <value>
                <fullName>News - CDE - HED</fullName>
            </value>
            <value>
                <fullName>News - CDE - K-12</fullName>
            </value>
            <value>
                <fullName>News - GOV - Finance Weekly</fullName>
            </value>
            <value>
                <fullName>News - GOV - GOV Daily</fullName>
            </value>
            <value>
                <fullName>News - GOV - Politics</fullName>
            </value>
            <value>
                <fullName>News - GT - Biz</fullName>
            </value>
            <value>
                <fullName>News - GT - Cybersecurity</fullName>
            </value>
            <value>
                <fullName>News - GT - DC</fullName>
            </value>
            <value>
                <fullName>News - GT - EM News</fullName>
            </value>
            <value>
                <fullName>News - GT - Futurestructure</fullName>
            </value>
            <value>
                <fullName>News - GT - GovTech Daily</fullName>
            </value>
            <value>
                <fullName>News - GT - Special Dist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>