force-app/main/default/objects/Ticket__c/fields/Order_for_Developer__c.field-meta.xml
<CustomField>
    <fullName>Order_for_Developer__c</fullName>
    <inlineHelpText
  >This is the order in which the assigned dev will work on this ticket form low to high</inlineHelpText>
    <label>Order for Developer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>