force-app/main/default/objects/Ticket__c/fields/Original_Due_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Original_Due_Date_Requested__c</fullName>
    <description
  >The originally requested Due Date of a ticket. Used in an Email Template to show if Requested Due Date was changed.</description>
    <label>Original Due Date Requested</label>
    <type>Date</type>
</CustomField>