force-app/main/default/objects/Ticket__c/fields/Original_Product1__c.field-meta.xml
<CustomField>
    <fullName>Original_Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>