force-app/main/default/objects/Ticket__c/fields/Owner_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Current_User__c</fullName>
    <formula>IF($User.Id = OwnerId, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>