force-app/main/default/objects/Ticket__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paper</label>
    <referenceTo>Paper__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>