force-app/main/default/objects/Ticket__c/fields/Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This field is for referencing a ticket that is the parent of the current ticket, for use in projects.</description>
    <label>Parent Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Sub Tickets</relationshipLabel>
    <relationshipName>Sub_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>