force-app/main/default/objects/Ticket__c/fields/Parent_Ticket_Title__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_Title__c</fullName>
    <formula>Parent_Ticket__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Ticket Title</label>
    <type>Text</type>
</CustomField>