force-app/main/default/objects/Ticket__c/fields/Per_Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Per_Gift_Card__c</fullName>
    <description>Dollar amount per gift card offered in promotion.</description>
    <label>$ Per Gift Card</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>