force-app/main/default/objects/Ticket__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Needs Specification</fullName>
            </value>
            <value>
                <fullName>Needs Specs</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>QA (Dev)</fullName>
            </value>
            <value>
                <fullName>QA (Requestor)</fullName>
            </value>
            <value>
                <fullName>QAd - Ready for live</fullName>
            </value>
            <value>
                <fullName>Fact Check</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Needs Approval</fullName>
                <label>Needs External Approval</label>
            </value>
            <value>
                <fullName>Approved with Changes</fullName>
            </value>
            <value>
                <fullName>Copy Edit</fullName>
            </value>
            <value>
                <fullName>Revise and Resend</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Waiting on Response</fullName>
            </value>
            <value>
                <fullName>Waiting on Response (Requestor)</fullName>
            </value>
            <value>
                <fullName>Waiting on DEV</fullName>
            </value>
            <value>
                <fullName>Waiting on SF Ops</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>Ready for Live</fullName>
            </value>
            <value>
                <fullName>Waiting Room</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reallocation Needed</fullName>
            </value>
            <value>
                <fullName>Cancel/Rebill Needed</fullName>
            </value>
            <value>
                <fullName>Contract Cycle Finished</fullName>
            </value>
            <value>
                <fullName>Invite Sent for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>