force-app/main/default/objects/Ticket__c/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <inlineHelpText>Order of Top Priority Projects</inlineHelpText>
    <label>Priority Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>