force-app/main/default/objects/Ticket__c/fields/Process_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Process_Incentives__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Incentives</label>
    <type>Checkbox</type>
</CustomField>