force-app/main/default/objects/Ticket__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <inlineHelpText>Select a product (if applicable)</inlineHelpText>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Event</fullName>
            </value>
            <value>
                <fullName>Interview List</fullName>
            </value>
            <value>
                <fullName>Lead Gen</fullName>
            </value>
            <value>
                <fullName>Magazine Lot Split</fullName>
            </value>
            <value>
                <fullName>Mailing List</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overall Audience</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Special Edition Newsletter</fullName>
            </value>
            <value>
                <fullName>Standard Event</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>