force-app/main/default/objects/Ticket__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <inlineHelpText
  >This field is used to track a Project&apos;s completion progress.</inlineHelpText>
    <label>Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>