force-app/main/default/objects/Ticket__c/fields/Project_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Contract_Number__c</fullName>
    <description
  >Created for Ticket #82571 for use on Webinar Registration Order Form Tickets.</description>
    <formula>Project__r.Contract__r.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Contract #</label>
    <type>Text</type>
</CustomField>