force-app/main/default/objects/Ticket__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description
  >This is the Record ID from the associated Project Record.</description>
    <formula>Project__r.Id</formula>
    <inlineHelpText
  >This is the Record ID from the associated Project Record.</inlineHelpText>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>