force-app/main/default/objects/Ticket__c/fields/Project_Scale__c.field-meta.xml
<CustomField>
    <fullName>Project_Scale__c</fullName>
    <inlineHelpText
  >SMALL: Minor changes or enhancements, Low resource requirements, Short duration [1 month or less upon Project start]. 
   MEDIUM: Moderate changes or new initiatives, Moderate resource requirements, Medium duration [3 months or less upon Project start].    LARGE: Major transformations or complex projects, High resource requirements, Long duration [6+ months upon Project start].</inlineHelpText>
    <label>Project Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>