force-app/main/default/objects/Ticket__c/fields/Project_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Project_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Roadmap Project</label>
    <type>Checkbox</type>
</CustomField>