force-app/main/default/objects/Ticket__c/fields/Promo_Code_Req_d__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_Req_d__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >To be eligible to receive a gift card, registrants must have a promo code indicating they were invited.</inlineHelpText>
    <label>Promo Code Req&apos;d</label>
    <type>Checkbox</type>
</CustomField>