force-app/main/default/objects/Ticket__c/fields/Promo_Source__c.field-meta.xml
<CustomField>
    <fullName>Promo_Source__c</fullName>
    <label>Promo Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>