force-app/main/default/objects/Ticket__c/fields/Proposed_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Event_Date__c</fullName>
    <description
  >The date that is being proposed as the event start date. Only used by Webinar Registration Order Form record type. Removed from page layout 2/16/2022 per Ticket #35071. Likely to backup/DELETE in the future.</description>
    <label>Proposed Event Date</label>
    <type>Date</type>
</CustomField>