force-app/main/default/objects/Ticket__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>