force-app/main/default/objects/Ticket__c/fields/Pull_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_URL__c</fullName>
    <description>The URL to the Git Pull Request</description>
    <label>Pull Request URL</label>
    <type>Url</type>
</CustomField>