force-app/main/default/objects/Ticket__c/fields/Qualifier_view_time_req_d__c.field-meta.xml
<CustomField>
    <fullName>Qualifier_view_time_req_d__c</fullName>
    <inlineHelpText
  >The type of view time required by the registrant.</inlineHelpText>
    <label>Qualifier (view time req&apos;d)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viewed (full length)</fullName>
            </value>
            <value>
                <fullName>Viewed (any length)</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>