force-app/main/default/objects/Ticket__c/fields/Random_Winners__c.field-meta.xml
<CustomField>
    <fullName>Random_Winners__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Gift card winners are to be selected at random (not chronologically).</inlineHelpText>
    <label>Random Winners</label>
    <type>Checkbox</type>
</CustomField>