force-app/main/default/objects/Ticket__c/fields/Reason_for_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Escalation__c</fullName>
    <description>Added for Ticket #79824</description>
    <label>Reason for Escalation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>