force-app/main/default/objects/Ticket__c/fields/Registration_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Guarantee__c</fullName>
    <description>Example values: 125 log-on, 250 registered</description>
    <label>Registration Guarantee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>