force-app/main/default/objects/Ticket__c/fields/Registration_Import_Update__c.field-meta.xml
<CustomField>
    <fullName>Registration_Import_Update__c</fullName>
    <inlineHelpText
  >For Registration imports only, please select the type of updates needed.</inlineHelpText>
    <label>Registration Import/Update</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Contact_Pull_Contact_Count__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear contact&apos;s department field</fullName>
                <label>Clear contact’s department field</label>
            </value>
            <value>
                <fullName>Delete registrations</fullName>
            </value>
            <value>
                <fullName>File includes multiple events</fullName>
            </value>
            <value>
                <fullName>Gift card recipients</fullName>
            </value>
            <value>
                <fullName>Import new registrations</fullName>
            </value>
            <value>
                <fullName>Import payment</fullName>
            </value>
            <value>
                <fullName>Move contacts into Accounts</fullName>
            </value>
            <value>
                <fullName
        >Update contact&apos;s title/organization/department</fullName>
                <label
        >Update contact&apos;s title/organization/department</label>
            </value>
            <value>
                <fullName
        >Update existing registrations  (e.g. Reg Type or No Show)</fullName>
                <label
        >Update existing registrations (e.g. Reg Type or No Show)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>