force-app/main/default/objects/Ticket__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <description>Requested per Ticket #34197.</description>
    <inlineHelpText
  >For the ticket requestor to fill in if they want.</inlineHelpText>
    <label>Release Notes</label>
    <type>TextArea</type>
</CustomField>