force-app/main/default/objects/Ticket__c/fields/Release_Risk__c.field-meta.xml
<CustomField>
    <fullName>Release_Risk__c</fullName>
    <defaultValue>&quot;Medium&quot;</defaultValue>
    <description
  >Describes the assessed level of risk of releasing the code associated with this feature / bug. To be filled in by a developer</description>
    <label>Release Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>