force-app/main/default/objects/Ticket__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <description>Sales Admin Request Form Field</description>
    <inlineHelpText>Sales Admin Request Form Field</inlineHelpText>
    <label>Request Description</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>