force-app/main/default/objects/Ticket__c/fields/Request_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Due_Date__c</fullName>
    <description>Sales Admin Request Form Field</description>
    <inlineHelpText>Sales Admin Request Form Field</inlineHelpText>
    <label>Request Due Date</label>
    <type>Date</type>
</CustomField>